--- a/views/index.pug
+++ b/views/index.pug
@@ -3,14 +3,14 @@ extends layout
 block content
   div(class="container")
     div(class="row")
-      h1(class="text-center col-md-12")=title
+      h1(class="text-center col-md-12 text-white pb-4")=title
     div(class="row mt-2")
       input(id="HTTPLinkInput" class="col-md-12 mt-2 form-control" placeholder="https://www.youtube.com/watch?v=")
     div(class="mt-2 embed-responsive-16by9 embed-responsive" id="iFrameContainer")
       iframe(id="previewIframe" class="col-xs-12 text-center embed-responsive-item ")
     div(class="row mt-2")
       div(class="button-group btn-block")
-        button(class="btn btn-primary btn-block disabled btn-dark" id="downloadButton") Downlaod
-    div(class="row mt-2 progress" id="progressBarContainer")
-      div(id="progressBar" class="progress-bar bg-dark progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100")
+        button(class="btn btn-dark btn-block disabled btn-outline-light" id="downloadButton") Download as MP3
+    div(class="row mt-2 progress" id="progressBarContainer" style="height:30px")
+      h5(id="progressBar" class="h-100 progress-bar bg-dark progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100")
     ul(class="list-group pt-2 row" id="URLList")
